# pastry-1.1

./: .env  .gitignore  Cargo.toml  README.md  Shuttle.toml
.sqlx/: query-0053295c4b02cfeb9f0f7da0c6f5f203dba66a4d1591d8327d60cacf801c4af2.json  query-0b606d83801451c5b8c5fe5430c39b621d0a40b05db410aba5a757fd5cedfaf7.json  query-160eb34ca2d7d5ec1e2b1d44cb27f4eecb8f98a0fcd72f68d813751b6dffae42.json  query-1fdd8bd9ec7bea7250ad9454dbfda4f79a5e4b94d2ff06ad5f33df481ec2153d.json  query-31005f9f2e921557dcc8a31ac693dadca9fc50566894a3a58052bcdb7dd39c69.json  query-4fc026c8dae529617e08d10fc3242e1bada4296470e2b2ce9b6bf13f51f0cd79.json  query-58060c44b82f7881f6f34ab447e95baf20f566a1fc9aeaa80b7d33a4595ef6d0.json  query-65a8781dff58442082a16c731be5acfdb3c61ad599b2031433be6c554821df05.json  query-8a5003571e33b70be47bf1bd16d9cd4c3dedc7aab51990a2d11d69e363797836.json  query-b98f43e53b44bad8073977ec140ae777764696b56bfc7801dc486e47abdb9b4d.json  query-c2d203ffaf0e6c72a3570481ba0d1dd74028a22f86afee1579ee807a4f761d16.json  query-f90a890575205cf4cd0f8471a9666ca1dc0980ed8ce12e1e9676ee7f51571d47.json
migrations/: 20250722233637_init_schema.down.sql  20250722233637_init_schema.up.sql
src/: jws.rs  main.rs  models.rs  state.rs
src/common/: constants.rs  error.rs  mod.rs  prelude.rs  utils.rs
src/handlers/: admin.rs  dashboard.rs  friendship.rs  mod.rs  notifications.rs  paste.rs  profile.rs  user.rs
static/css/: style.css  user.css
static/js/: edit.js  main.js  (+2 more)
templates/: 400.html  403.html  404.html  500.html  _notifications_icon.html  _theme_toggle.html  base.html  dashboard.html
(+18 files in other folders)
