[package]
name = "pastry_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-redis = "0.13.1"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.11.0"
ammonia = "4.1.0"
anyhow = "1.0.98"
base64 = "0.22.1"
bcrypt = "0.17.0"
chrono =  { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shuttle-actix-web = "0.56.0"
shuttle-runtime = "0.56.0"
shuttle-shared-db = { version = "0.56.0", features = ["postgres"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "migrate", "chrono"] }
tera = "1.20.0"
thiserror = "2.0.12"
tikv-jemallocator = "0.6.0"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }
